# Plotypus_3

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: Doxyfile  plotypus.cpp  plotypus.h
src/base/: localMacros.h  mulitplot.cpp  mulitplot.h  multiplot.cpp  multiplot.h  report.cpp  report.h  report.txx  sheet.cpp  sheet.h  sheet.txx  sheetscollection.cpp  sheetscollection.h  sheetscollection.txx  stylescollection.cpp  stylescollection.h  terminalinfoprovider.cpp  terminalinfoprovider.h  util.cpp  util.h  util.txx
src/collections/: dataviewcollection.cpp  dataviewcollection.h  dataviewcollection.txx  overlayscollection.cpp  overlayscollection.h  overlayscollection.txx  sheetscollection.cpp  sheetscollection.h  sheetscollection.txx  stylescollection.cpp  stylescollection.h
src/dataview/: dataview.cpp  dataview.h  dataview2d.cpp  dataview2d.h  dataview2d.txx  dataview2dcompound.h  dataview2dcompound.txx  dataview2dseparate.cpp  dataview2dseparate.h  dataviewdefault.cpp  dataviewdefault.h  dataviewdefaultcompound.h  dataviewdefaultcompound.txx  dataviewdefaultseparate.cpp  dataviewdefaultseparate.h  dataviewmatrix.cpp  dataviewmatrix.h
src/definitions/: constants.h  errors.h  internalconstants.h  styles.cpp  styles.h  types.cpp  types.h
src/doxygen/: home.md
src/doxygen/img/: class_decision_flowchart.dot  class_relationships.dot
src/doxygen/tutorial/: home.md
src/elements/: axisdescriptor.cpp  axisdescriptor.h  keydescriptor.cpp  keydescriptor.h  label.cpp  label.h  overlay.cpp  overlay.h  palettedescriptor.cpp  palettedescriptor.h  types.h
src/plot/: keydescriptor.cpp  keydescriptor.h  plot.cpp  plot.h  plot.txx  plot2d.cpp  plot2d.h  plot2d.txx  plot3d.cpp  plot3d.h  plotorthogonalaxes.cpp  plotorthogonalaxes.h  plotorthogonalaxes.txx  plotradial.cpp  plotradial.h  plotwithaxes.cpp  plotwithaxes.h  plotwithaxes.txx
src/sheets/: abstractplot.cpp  abstractplot.h  plotdefault.cpp  plotdefault.h  plotdefault.txx  plotradial.cpp  plotradial.h  sheet.cpp  sheet.h
src/unittest/: main.cpp  showcase.cpp  showcase.h  showcase_data.cpp  unittest.cpp  unittest.h  unittest_procs.h  unittest_report_sheet.cpp
